# onvif-proxy

./: .gitignore  Cargo.toml  README.md  SETUP_COMPLETE.md  run.sh  test_camera_direct.sh  test_events.sh  test_getstreamuri.rs  test_proxy_getstreamuri.rs
config/: cameras.yaml.example
docs/: GETTING_STARTED.md  REOLINK_QUIRKS.md
src/: config.rs  lib.rs  main.rs
src/camera/: client.rs  config.rs  manager.rs  mod.rs
src/onvif/: auth.rs  device.rs  events.rs  media.rs  mod.rs  soap.rs  types.rs
src/server/: http.rs  mod.rs  routes.rs
src/translator/: mod.rs  reolink.rs  response.rs  rules.rs
